Changed link hover and active color. Corrected graph alignment in all browser

--- a/src/main/webapp/resources/ilids-template/css/sb-admin.css
+++ b/src/main/webapp/resources/ilids-template/css/sb-admin.css
@@ -247,5 +247,9 @@ select option{background: #fff;color: #535454;}
   .navbar-inverse .navbar-nav > .open > a .active_arrow{display:block!important;}
   
    .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus{background: url(/ilids/resources/images/menu_bg2.png);}
+   
+   .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
+    background-color: #384355;
+}
   
   
